# mooring

./: .gitignore  .importlinter  CLAUDE.md  LICENSE  README.md  pyproject.toml  sonar-project.properties  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/admins/: ai-privacy.md  build-and-distribute.md  configuration.md  github-setup.md  index.md  threat-model.md
docs/assets/javascripts/: landing.js
docs/assets/stylesheets/: landing.css  oah-theme.css
docs/developers/: architecture-plan.md  contributing.md  index.md
docs/developers/roadmap/: duplicate-as-draft.md  handover-explainer.md  index.md  local-safety-net.md  mooring-doctor.md  offline-mode.md  pbi-semantic-model.md  pull-digest.md  push-guard.md  review-my-changes.md  staleness-guard.md  traceback-fixer.md  version-history.md
docs/users/: ai-copilot.md  cli.md  conflicts.md  daily-workflow.md  index.md  power-bi.md  quickstart.md
overrides/: home.html
scripts/: release.ps1  release.py  spike_copilot_chat.py  spike_live_introspect.py  spike_marimo_filewatch.py  spike_marimo_http_control.py  vendor_fonts.py  vendor_spacy_model.py
src/mooring/: __init__.py  _checks_runtime.py  _connections_runtime.py  _inputs_runtime.py  activity.py  ai_config.py  auth.py  celldiff.py  checks.py  cli.py  config.py  config_default.toml  config_store.py  connections.py  deletion.py  doctor.py  editor.py  githost.py  github.py  gitsha.py  inputs.py  manifest.py  marimo_rt.py  notebook_template.py  notebook_undo.py  paths.py  pbip.py  pbip_model.py  pushguard.py  pyproject_env.py  reveal.py  runtime.py  schema.py  shadow.py  sync.py  telemetry.py  trash.py  verify.py  whatsnew.py  workspace_config.py
src/mooring/ai/: __init__.py  base.py  batch.py  cellwrite.py  chat.py  codeblocks.py  context.py  copilot.py  datadictionary.py  egress.py  fanout.py  introspect.py  investigate.py  locality.py  ner.py  ner_spacy.py  openai_provider.py  openai_session.py  pii.py  prompt.py  scan.py  secrets.py  session.py  tools.py  traceback.py
src/mooring/ai/codelib/: __init__.py  ast_walk.py  docscan.py  importpath.py  loader.py  model.py
src/mooring/ai/datadictionary/: __init__.py  loader.py  model.py
src/mooring/ai/datadictionary/parsers/: __init__.py  _common.py  dbt.py  frictionless.py  generic.py  great_expectations.py
src/mooring/app/: __init__.py  apply.py  batch_service.py  chat_service.py  context_folders.py  deliver.py  investigate_service.py  notebooks.py  reviews.py  verify_run.py
src/mooring/hub/: pages.py  server.py  settings_schema.py  sse.py
src/mooring/hub/routes/: __init__.py  batch.py  chat.py  files.py  reviews.py  settings.py  setup.py  sync.py
src/mooring/hub/static/: activity.html  activity.js  activity_fmt.js  app.js  batch.html  batch.js  chat.html  chat.js  chat_core.js  checklist.js  diff_fmt.js  files_tree.js  freshness.js  guard_fmt.js  history_fmt.js  index.html  reviews.html  reviews.js  scene.js  settings.html  settings.js  style.css  theme.js  whatsnew_fmt.js  workbench.html  workbench.js
tests/: conftest.py  manual_editor_check.py  test_activity.py  test_ai.py  test_ai_codelib_tools.py  test_ai_dict_tools.py  test_ai_model_tools.py  test_ai_scan.py  test_ai_tools.py  test_app_notebooks.py  test_auth.py  test_batch.py  test_batch_service.py  test_catalog.py  test_celldiff.py  test_cellwrite.py  test_chat_context.py  test_chat_session.py  test_checks.py  test_cli_adopt.py  test_cli_ai_code.py  test_cli_ai_context.py  test_cli_ai_model.py  test_cli_delete.py  test_cli_deps.py  test_cli_history.py  test_cli_offline.py  test_cli_pushguard.py  test_cli_repo.py  test_cli_rollback.py  test_cli_shadow.py  test_cli_whatsnew.py  test_codeblocks.py  test_codelib.py  test_config.py  test_config_store.py  test_connections.py  test_context.py  test_context_folders.py  test_copilot_provider.py  (+51 more)
tests/js/: activity_fmt.test.js  chat_core.test.js  checklist.test.js  diff_fmt.test.js  files_tree.test.js  freshness.test.js  guard_fmt.test.js  history_fmt.test.js  package-lock.json  package.json  static_globals.test.js  whatsnew_fmt.test.js
