[project]
name = "mooring"
version = "0.2.8"
description = "Git-free marimo notebook sharing via GitHub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.13",
    "starlette",
    "uvicorn",
    "requests",
    "truststore",
    "keyring",
    "platformdirs",
    "tomli-w>=1.2.0",
]
# Mooring ships lean: only its own runtime is bundled. A repo's notebook
# dependencies live in that repo's own pyproject.toml (synced via GitHub) — see
# docs/admins/build-and-distribute.md. uv users run notebooks against it; for a
# frozen .pyz the admin builds a team-specific artifact from those deps.

[project.scripts]
mooring = "mooring.cli:main"

# The app supports Python 3.12+ (installed from PyPI, it uses the admin's own
# interpreter). moonlit (the .pyz/.exe builder) is a separate build tool, not a
# runtime/dev dependency — invoke it isolated via uvx so it doesn't bloat the
# lock. It needs Python >=3.13 to run; --python-version picks which Python a
# frozen build targets (any 3.12+):
#   uvx --python 3.13 moonlit build ... --python-version 3.13
[dependency-groups]
dev = [
    "pytest",
    "responses",
    "ruff",
    # starlette.testclient backend. starlette now prefers `httpx2` (the
    # Pydantic-stewarded httpx successor); plain httpx still works behind a
    # deprecation warning and is kept here as the conservative choice.
    "httpx",
    # builds the docs/ site (see zensical.toml); `uv run zensical serve|build`
    "zensical>=0.0.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mooring"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
