[project]
name = "mooring"
version = "0.3.0"
description = "Git-free marimo notebook sharing via GitHub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.13",
    "starlette",
    "uvicorn",
    "requests",
    "truststore",
    "keyring",
    "platformdirs",
    "tomli-w>=1.2.0",
]
# Mooring ships lean: only its own runtime is bundled. A repo's notebook
# dependencies live in that repo's own pyproject.toml (synced via GitHub) — see
# docs/admins/build-and-distribute.md. uv users run notebooks against it; for a
# frozen .pyz the admin builds a team-specific artifact from those deps.

# The AI copilot is opt-in: the GitHub Copilot SDK bundles a ~150 MB native CLI,
# so it ships as an extra rather than a base dependency. Install with
# `pip install mooring[copilot]` / `uvx mooring[copilot]`. Without it, the chat
# surfaces a "install the copilot extra" hint and the rest of mooring is lean.
[project.optional-dependencies]
copilot = [
    "github-copilot-sdk>=1.0.1",
]

[project.scripts]
mooring = "mooring.cli:main"

# The app supports Python 3.12+ (installed from PyPI, it uses the admin's own
# interpreter). moonlit (the .pyz/.exe builder) is a separate build tool, not a
# runtime/dev dependency — invoke it isolated via uvx so it doesn't bloat the
# lock. It needs Python >=3.13 to run; --python-version picks which Python a
# frozen build targets (any 3.12+):
#   uvx --python 3.13 moonlit build ... --python-version 3.13
[dependency-groups]
dev = [
    "pytest",
    "responses",
    "ruff",
    # starlette.testclient backend. starlette now prefers `httpx2` (the
    # Pydantic-stewarded httpx successor); plain httpx still works behind a
    # deprecation warning and is kept here as the conservative choice.
    "httpx",
    # builds the docs/ site (see zensical.toml); `uv run zensical serve|build`
    "zensical>=0.0.45",
    # Test-only data readers: the schema-inspection and AI tests load real data
    # files — polars + fastexcel extract parquet/csv/xlsx schemas, openpyxl writes
    # the xlsx fixtures. These never enter the shipped wheel (which stays lean —
    # see [project.dependencies]); they only need to exist when the suite runs.
    "polars",
    "openpyxl",
    "fastexcel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mooring"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
