[project]
name = "mooring"
version = "0.4.1"
description = "Git-free marimo notebook sharing via GitHub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.23.9",
    "starlette",
    "uvicorn",
    "requests",
    "truststore",
    "keyring",
    "platformdirs",
    "tomli-w>=1.2.0",
    "pyyaml>=6",
]
# Mooring ships lean: only its own runtime is bundled. A repo's notebook
# dependencies live in that repo's own pyproject.toml (synced via GitHub) — see
# docs/admins/build-and-distribute.md. uv users run notebooks against it; for a
# frozen .pyz the admin builds a team-specific artifact from those deps.

# The AI copilot is opt-in: the GitHub Copilot SDK bundles a ~150 MB native CLI,
# so it ships as an extra rather than a base dependency. Install with
# `pip install "mooring[copilot]"` / `uvx "mooring[copilot]"` / `uv add
# "mooring[copilot]"` (quote the brackets). Without it, the chat surfaces an
# "install the copilot extra" hint and the rest of mooring is lean.
[project.optional-dependencies]
copilot = [
    "github-copilot-sdk>=1.0.1",
]
# Optional NER name detection for the outbound-PII guard (Phase 2). GLiNER pulls
# torch + transformers (hundreds of MB), so it ships as an extra — without it the
# guard still does its stdlib structured-PII scan. Install with
# `pip install "mooring[pii]"` (quote the brackets). Pre-fetch the model with
# `mooring ai pii model`.
pii = [
    "gliner>=0.2.13",
]
# Offline NER name/organisation detection for PyPI-only / air-gapped teams that
# can't reach Hugging Face (GLiNER) or GitHub (spaCy's own models). Uses spaCy
# with an MIT-licensed model republished to PyPI as `mooring-spacy-en-md`, so
# `pip install "mooring[pii-spacy]"` needs no other channel. Select it with
# `[ai.pii] name_backend = "spacy"`. See docs/admins/ai-privacy.md.
pii-spacy = [
    "spacy>=3.8,<3.9",
    "mooring-spacy-en-md",
]

[project.scripts]
mooring = "mooring.cli:main"

# The app supports Python 3.12+ (installed from PyPI, it uses the admin's own
# interpreter). moonlit (the .pyz/.exe builder) is a separate build tool, not a
# runtime/dev dependency — invoke it isolated via uvx so it doesn't bloat the
# lock. It needs Python >=3.13 to run; --python-version picks which Python a
# frozen build targets (any 3.12+):
#   uvx --python 3.13 moonlit build ... --python-version 3.13
[dependency-groups]
dev = [
    "pytest",
    "responses",
    "ruff",
    # Architecture guardrail: `lint-imports` enforces the layering contracts in
    # .importlinter (the dependency-direction rules from the migration plan) so a
    # backwards import can't silently re-enter the tree. Runs in release CI beside
    # ruff; pure static analysis (grimp parses source) so optional extras need not
    # be installed for it to work.
    "import-linter",
    # starlette.testclient backend. starlette now prefers `httpx2` (the
    # Pydantic-stewarded httpx successor); plain httpx still works behind a
    # deprecation warning and is kept here as the conservative choice.
    "httpx",
    # builds the docs/ site (see zensical.toml); `uv run zensical serve|build`
    "zensical>=0.0.45",
    # Test-only data readers: the schema-inspection and AI tests load real data
    # files — polars + fastexcel extract parquet/csv/xlsx schemas, openpyxl writes
    # the xlsx fixtures. These never enter the shipped wheel (which stays lean —
    # see [project.dependencies]); they only need to exist when the suite runs.
    "polars",
    "openpyxl",
    "fastexcel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mooring"]

# The model companion lives in packages/ and is published to PyPI separately. It is
# wired as a local PATH dependency rather than a uv *workspace* member: a workspace
# makes `uv build` / moonlit (the frozen-build tool) require a `--package` selector,
# which moonlit can't pass — so the workspace broke the release build. As a path dep
# it stays in-repo and dev-resolvable without that. The companion is pulled only by
# the `pii-spacy` extra (a default `uv sync` installs neither spaCy nor the model),
# and the published `mooring` wheel lists `mooring-spacy-en-md` as a normal PyPI
# dependency (uv strips this source override from published metadata).
[tool.uv.sources]
mooring-spacy-en-md = { path = "packages/mooring-spacy-en-md" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
